# octra

./: .clang-format  .clangd  .envrc  .gitignore  .gitmodules  .golangci.yml  .luarc.json  .markdownlint-cli2.yaml  .php-cs-fixer.dist.php  .prettierignore  .rubocop.yml  .user.ini  .yamllint.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPPLINT.cfg  Cargo.toml  DESCRIPTION  MANIFEST.in  Makefile  README.md  README.org  StlEx.java  TODO.org  binding.gyp  current_prompt.md  debug.cpp  dotnet-tools.json  eslint.config.cjs  flake.nix  index.js  justfile  lib_sources.txt  octra.nix  octra.pc.in  octrad.nix  octraguile.nix  octrajs.nix  (+15 more)
.github/workflows/: ci-linux.yml  ci-macos-windows.yml
R/: octrar.R
all/: CMakeLists.txt
assets/: logo.xcf
benchmarks/: CMakeLists.txt
benchmarks/cpp/: splitmix64_bench.cpp
bindings/gooctra/: go.mod  octra.go
bindings/octraocaml/: dune-project
bindings/octraocaml/src/: dune  octra.mli
bindings/octratcl/: pkgIndex.tcl
bindings/octruby/: README.md  octruby.gemspec
bindings/perloctra/: MYMETA.json  MYMETA.yml  Makefile  Octra_wrap.cxx
bindings/rustoctra/: build.rs  evcxr.toml
bindings_tests/d/: dub.json  dub.selections.json  octrad-tests
bindings_tests/guile/: test_octra.scm
bindings_tests/lua/: test_octra.lua
bindings_tests/ocaml/: dune  test_octra.ml
bindings_tests/perl/: test_octra.t
bindings_tests/php/: test_octra.php
bindings_tests/python/: test_pyoctra.py
bindings_tests/ruby/: test_octra.rb
bindings_tests/rust/: Cargo.toml
bindings_tests/tcl/: test_octra.tcl
cmake/: CPM.cmake  justfile  lib_sources.cmake
cmake/toolchains/: linux-x86-clang-debug.cmake  linux-x86-clang-release.cmake  linux-x86-gcc-debug.cmake  linux-x86-gcc-release.cmake
docs/: CMakeLists.txt  Doxyfile  conf.py  init.el  org-to-md.el
docs/pages/: examples.md  examples.org  tester.md
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  CMakePresets.json
examples/cpp/cmake/: lib_sources.cmake
examples/cpp/cmake/toolchains/: linux-x86-clang.cmake  linux-x86-gcc-debug.cmake  linux-x86-gcc-release.cmake  windows-x86-msvc-debug.cmake
examples/cpp/source/: octra_ex.cpp
examples/csharp/: stl_ex.cs
examples/d/: dub.json  dub.selections.json  octrad-example
examples/d/source/: app.d
examples/go/: go_test.go  octra_ex.go
examples/guile/: octra_ex.scm
examples/java/: StlEx.java  octra.java
examples/javascript/: octra_ex.js  stl_ex.js
examples/lua/: octra_ex.lua
examples/ocaml/: octra_ex.cmi  octra_ex.cmx  octra_ex.ml
examples/octave/: octra_ex.m
examples/perl/: octra_ex.pl
examples/php/: octra_ex.php  stl_ex.php
examples/python/: octra_ex.py  stl_ex.py
examples/r/: octra_ex.r  stl_ex.r
examples/ruby/: octra_ex.rb
examples/source/: dynarray_example.c  dynarray_example.cxx
examples/source/c/: debug_ex_c.cpp  dynarray_ex_c.cpp  dynarray_example.c  hmap_ex_c.cpp  hmap_example.c  linked_list_example.c  single_link_example.c
examples/source/cxx/: dynarray_example.cpp  dynarray_example.cxx
examples/tcl/: octra_ex.tcl
gooctra/: gooctra_wrap.cxx  octra.go
include/octra/: octra.hpp  octra_c.h
jOCTRA/: build.gradle.kts
jOCTRA-octra/: build.gradle.kts
joctra/: build.gradle.kts
joctra-octra/: CMakeLists.txt  octra_java_wrap.cpp
nix/: joctra-gradle-deps.json  joctra-init-deps.gradle  nuget-deps.json  octra.nix  octrad.nix  octraguile.nix  octrajs.nix  octralua.nix  octraocaml.nix  octraoctave.nix  octratcl.nix  octruby.nix  pyoctra.nix  update-joctra-gradle-deps.sh  update-nuget-deps.sh
octrad/: dub.json
octrad/source/: octrad_wrap.h
octradotnet/: CMakeLists.txt  IPair.cs  IVector.cs  Program.cs  octra.cs  octraPINVOKE.cs  octra_csharp_wrap.cpp
octradotnet.tests/: octradotnet.tests.csproj
octraocaml/: octraocaml.opam
octraocaml/src/: octra.ml  octra.mli  octra_ocaml_wrap.cxx  swig.ml  swig.mli
perloctra/: Makefile  Makefile.PL
playground/: README.md  examples.org  export.el  init.el  run.el
prebindings/OctraDotNet/: CMakeLists.txt
prebindings/gooctra/: CMakeLists.txt
prebindings/joctra/: CMakeLists.txt
prebindings/loctra/: CMakeLists.txt
prebindings/octraPHP/: CMakeLists.txt
prebindings/octraPHP/src/: octraPHP.i
prebindings/octraR/: CMakeLists.txt  Makevars.in
prebindings/octradotnet/: CMakeLists.txt
prebindings/octraguile/: CMakeLists.txt
prebindings/octrajs/: CMakeLists.txt  binding.gyp.in  package.json  setup.js.in
prebindings/octralua/: CMakeLists.txt
prebindings/octraoctave/: CMakeLists.txt
prebindings/octrars/: CMakeLists.txt  Cargo.toml
prebindings/octratcl/: CMakeLists.txt
prebindings/octratcl/src/: octratcl.i
prebindings/pyoctra/: CMakeLists.txt  pyproject.toml.in  setup.py.in
prebindings/pyoctra/swig_src/: pyoctra.i
rustoctra/examples/: octra_ex.rs
rustoctra/src/: bindings.rs  lib.rs
scripts/: format.sh  format_check.sh  lint.sh  test_all.sh
source/octra/: octra.cpp  octra_c.cpp
src/: Makevars  gooctra_wrap.cxx  octra_js_callbacks.inl  octra_js_wrap.cpp  octra_php_wrap.cpp  octra_python_wrap.cpp  octra_python_wrap.h  octra_r_wrap.cpp  octrajs.d.ts  php_octra.h
src/gooctra/: CMakeLists.txt  gooctra_test.go  gooctra_wrap.cxx  octra.go
src/gooctra_legacy/: octra.go
src/joctra/: build.gradle.kts
src/joctra-octra/: CMakeLists.prebindings.txt  CMakeLists.txt  octra_java_wrap.cpp
src/octra/: octra.cpp  octra_c.cpp
src/octraPHP/: CMakeLists.txt
src/octraguile/: CMakeLists.txt  octra.scm
src/octraguile/swig/: octraguile.i
src/octralua/: CMakeLists.txt  octra.lua
src/octraoctave/: CMakeLists.txt
task/: taskchampion.sqlite3
tests/: CMakeLists.txt  testthat.R
tests/cpp/: hello_world_tests.cpp  octra_api_tests.cpp  random_tests.cpp
tests/d/: dub.json  octrad-tests
tests/d/source/: app.d
tests/javascript/: octra.test.js
tests/ocaml/: dune-project  test_octra.ml
tests/octave/: test_octra.m
tests/php/: test_octra.php
tests/rust/: Cargo.toml
tests/rust/tests/: test_octra.rs
tests/source/: dynarray_tests.cpp  hello_world_tests.cpp
tests/testthat/: test-bindings.R
(+126 files in other folders)
