opam-version: "2.0"
synopsis: "OCaml (SWIG) bindings for the octra library"
description: """
OCaml bindings for the octra C++ library generated with SWIG.
"""
maintainer: "octra"
authors: "octra"
license: "Unlicense"
depends: [
  "ocaml"
  "dune" {>= "3.11"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
