cmake_minimum_required(VERSION 3.16)

project(
  octraoctave
  VERSION 0.0.1
  LANGUAGES CXX
)

include(GNUInstallDirs)

find_package(octra CONFIG REQUIRED)

find_program(SWIG_EXECUTABLE swig REQUIRED)
find_program(MKOCTFILE_EXECUTABLE mkoctfile REQUIRED)

set(SWIG_INTERFACE_FILE "${CMAKE_CURRENT_LIST_DIR}/swig/octraoctave.i")
set(GENERATED_WRAPPER "${CMAKE_CURRENT_BINARY_DIR}/octra_octave_wrap.cxx")
set(GENERATED_OCTFILE "${CMAKE_CURRENT_BINARY_DIR}/octra.oct")

get_target_property(OCTRA_INSTALLED_INCLUDE_DIRS octra::octra INTERFACE_INCLUDE_DIRECTORIES)
if(NOT OCTRA_INSTALLED_INCLUDE_DIRS)
  get_filename_component(OCTRA_REPO_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/../../include" REALPATH)
  set(OCTRA_INSTALLED_INCLUDE_DIRS "${OCTRA_REPO_INCLUDE_DIR}")
endif()

set(OCTRA_SWIG_INCLUDE_FLAGS "")
set(OCTRA_CXX_INCLUDE_FLAGS "")
foreach(incdir IN LISTS OCTRA_INSTALLED_INCLUDE_DIRS)
  list(APPEND OCTRA_SWIG_INCLUDE_FLAGS "-I${incdir}")
  list(APPEND OCTRA_CXX_INCLUDE_FLAGS "-I${incdir}")
endforeach()

add_custom_command(
  OUTPUT "${GENERATED_WRAPPER}"
  COMMAND "${SWIG_EXECUTABLE}" -octave -c++ ${OCTRA_SWIG_INCLUDE_FLAGS} -o "${GENERATED_WRAPPER}"
          "${SWIG_INTERFACE_FILE}"
  DEPENDS "${SWIG_INTERFACE_FILE}"
  VERBATIM
)

add_custom_command(
  OUTPUT "${GENERATED_OCTFILE}"
  COMMAND
    "${MKOCTFILE_EXECUTABLE}" -v -std=c++17 ${OCTRA_CXX_INCLUDE_FLAGS}
    -L$<TARGET_FILE_DIR:octra::octra> -Wl,-rpath,$<TARGET_FILE_DIR:octra::octra> -loctra -o
    "${GENERATED_OCTFILE}" "${GENERATED_WRAPPER}"
  DEPENDS "${GENERATED_WRAPPER}"
  VERBATIM
)

add_custom_target(octra_octave ALL DEPENDS "${GENERATED_OCTFILE}")

install(FILES "${GENERATED_OCTFILE}" DESTINATION "${CMAKE_INSTALL_DATADIR}/octave/site/m")
