(library
 (name octra)
 (public_name octraocaml)
 (wrapped false)
 (modules Swig Octra)
 (flags (:standard -w -a -warn-error -A))
 (foreign_stubs
  (language cxx)
  (names octra_ocaml_wrap)
  (flags
   (:standard -std=c++17 -I%{env:OCTRA_PREFIX=/no-such-prefix}/include/octra-0.0.1)))
 (c_library_flags
  (:standard -L%{env:OCTRA_PREFIX=/no-such-prefix}/lib/octra-0.0.1 -loctra
   -Wl,-rpath,%{env:OCTRA_PREFIX=/no-such-prefix}/lib/octra-0.0.1)))
